# ld-compress-ng

./: .gitignore  AGENTS.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  PROJECT_PLAN.md  README.md  REMOTE_SYNC.md  THIRD_PARTY_NOTICES.md
LICENSES/: LGPL-2.1-or-later.txt
cmake/: embed_spirv.cmake
docs/: HANDOFF.md  PROJECT_PLAN.md  build-and-testing.md  release-checklist.md  remote-sync.md
shaders/: vulkan_fixed_constant.comp  vulkan_smoke.comp
src/: accelerated_native_backend.cpp  accelerated_native_backend.h  compressor.cpp  compressor.h  flac_codec.cpp  flac_codec.h  flac_native_writer.cpp  flac_native_writer.h  flac_primitives.cpp  flac_primitives.h  hash.cpp  hash.h  lds_codec.cpp  lds_codec.h  main.cpp  metal_analysis.cpp  metal_analysis.h  metal_analysis.mm  metal_backend.cpp  metal_backend.h  metal_devices.cpp  metal_devices.h  metal_devices.mm  native_analysis_profile.h  native_flac_encoder.cpp  native_flac_encoder.h  native_verbatim_encoder.cpp  native_verbatim_encoder.h  opencl_analysis.cpp  opencl_analysis.h  opencl_analysis_internal.h  opencl_backend.cpp  opencl_backend.h  opencl_devices.cpp  opencl_devices.h  vulkan_analysis.cpp  vulkan_analysis.h  vulkan_backend.cpp  vulkan_backend.h  vulkan_devices.cpp  (+2 more)
tests/: compare_metal_scalar_frames.cpp  compare_opencl_scalar_frames.cpp  test_accelerated_native_backend.cpp  test_cli.cpp  test_external_decode_device_selection.py  test_flac_native_writer.cpp  test_flac_primitives.cpp  test_flac_roundtrip.cpp  test_flac_test_files.cpp  test_hash.cpp  test_lds_codec.cpp  test_metal_analysis.cpp  test_metal_devices.cpp  test_metal_smoke.cpp  test_metal_smoke.mm  test_native_flac_external_decode.py  test_opencl_analysis.cpp  test_opencl_devices.cpp  test_real_fixtures.cpp  test_reference_ogg.cpp  test_vulkan_analysis.cpp  test_vulkan_devices.cpp  test_vulkan_smoke.cpp
tests/support/: opencl_analysis_test_support.cpp  opencl_analysis_test_support.h  vulkan_analysis_test_support.cpp  vulkan_analysis_test_support.h  vulkan_smoke.cpp  vulkan_smoke.h
tools/: check_local_matrix.py  roundtrip_real_fixtures.py  sweep_real_fixtures.py
